016: small refactoring